# Autonomus-Enginner

./: .agentconfig  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Improvents docs/: Chat gpt suggestion list to improve AE.docx  ChatGPT - Autonomous Engineer Improvement Backlog v2.docx  Gemini - Autonomous Engineer Improvement Backlog v2.docx  Gemini Improvent suggestions.docx  Grok - Autonomous Engineer Improvement Backlog v2.docx  Grok Suggestions Autonomous Engineer Improvement Backlog.docx
agents/workers/: qa_engineer.py
benchmarks/: README.md
benchmarks/results/: pallets_flask.json  psf_requests.json  tiangolo_fastapi.json
config/: llm_providers.py  settings.py
core/: claude_flow.py  cost_estimator.py  error_classifier.py  git_agent.py  hitl_manager.py  patch_engine.py  performance_profiler.py  pii_scrubber.py  reflector.py  slm_router.py  snapshot.py  static_analysis.py  vector_memory.py
docs/: HOW_TO_USE_STEP_BY_STEP.md  USAGE.md  architecture.md  evolution.md  ollama_setup.md
sandbox/: docker_executor.py
scripts/: dispatch_django.py  dispatch_fastapi.py  dispatch_flask.py  test_p0_p1.py  test_p2.py  test_v2.py  v2_clean.txt  v2_docs_extract.txt  v2_suggestions.txt
ui/: index.css  index.html
ui/src/: main.js
